[gd_scene load_steps=16 format=3 uid="uid://cbkmr6exdhh1d"]

[ext_resource type="Script" path="res://enemies/slime/slime.gd" id="1_liakn"]
[ext_resource type="Texture2D" uid="uid://7etf7cv7oo2" path="res://assets/pixelfrog-assets.itch.io/pixel-adventure-2/Enemies/Slime/Idle-Run (44x30).png" id="2_18lih"]
[ext_resource type="Script" path="res://nodes/hurtbox.gd" id="2_h5eio"]
[ext_resource type="Script" path="res://nodes/hitbox.gd" id="4_fa6mo"]
[ext_resource type="AudioStream" uid="uid://dlu4slspkvpp1" path="res://assets/kenny.nl/slime_000.ogg" id="5_y8qgu"]
[ext_resource type="Texture2D" uid="uid://ccggo7hwre05" path="res://assets/pixelfrog-assets.itch.io/pixel-adventure-2/Enemies/Slime/Particles (62x16).png" id="6_m6j5y"]

[sub_resource type="Animation" id="Animation_e01tr"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ogp7r"]
resource_name = "hit"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.314159, 0.0, -0.349066, 3.48787e-16, 3.48787e-16]
}

[sub_resource type="Animation" id="Animation_ag6g4"]
resource_name = "idle"
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5bkrp"]
_data = {
"RESET": SubResource("Animation_e01tr"),
"hit": SubResource("Animation_ogp7r"),
"idle": SubResource("Animation_ag6g4")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mqaej"]
radius = 14.0
height = 38.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_y34x8"]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4l24l"]
particle_flag_disable_z = true
direction = Vector3(2.08165e-12, -1, 2.08165e-12)
spread = 0.0
gravity = Vector3(2.08165e-12, 600, 2.08165e-12)
initial_velocity_min = 20.0
initial_velocity_max = 100.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 2.0
scale_max = 4.0
anim_offset_max = 1.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jaufr"]
particle_flag_disable_z = true
direction = Vector3(1, -1, 2.08165e-12)
spread = 30.0
gravity = Vector3(2.08165e-12, 300, 2.08165e-12)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 2.0
scale_max = 3.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eywop"]
radius = 14.0
height = 42.0

[node name="Slime" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 16
script = ExtResource("1_liakn")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_18lih")
hframes = 10

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-16, 15, 16, 15, 16, 8, 15, 0, 12, -6, 8, -9, 0, -11, -8, -9, -12, -6, -15, 0, -16, 8)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_5bkrp")
}

[node name="HurtBox" type="Area2D" parent="."]
visible = false
script = ExtResource("2_h5eio")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-1.42109e-14, 4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_mqaej")

[node name="HitBox" type="Area2D" parent="."]
visible = false
script = ExtResource("4_fa6mo")
damage = 3
hurts_groups = Array[String](["player"])

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_mqaej")

[node name="Sfx" type="Node2D" parent="."]

[node name="Hit" type="AudioStreamPlayer2D" parent="Sfx"]
stream = ExtResource("5_y8qgu")

[node name="Die" type="AudioStreamPlayer2D" parent="Sfx"]
stream = ExtResource("5_y8qgu")

[node name="DeathExplosion" type="GPUParticles2D" parent="Sfx"]
visible = false
z_index = 10
material = SubResource("CanvasItemMaterial_y34x8")
amount = 20
process_material = SubResource("ParticleProcessMaterial_4l24l")
texture = ExtResource("6_m6j5y")
lifetime = 3.0
explosiveness = 1.0

[node name="HurtParticles" type="GPUParticles2D" parent="Sfx"]
visible = false
z_index = 10
material = SubResource("CanvasItemMaterial_y34x8")
amount = 2
process_material = SubResource("ParticleProcessMaterial_jaufr")
texture = ExtResource("6_m6j5y")
explosiveness = 1.0

[node name="FriendSentinel" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="FriendSentinel"]
position = Vector2(-7.10543e-15, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_eywop")

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="area_entered" from="FriendSentinel" to="." method="_on_friend_sentinel_area_entered"]
